# TP1-SO

./: .gitignore  CMakeLists.txt  Makefile  README.md  chaser  defs.h  jugador  main.c  master  player.c  player_debug.txt  run  valgrind-out.txt  vista  vista.c
src/: chompChampsUtils.c  chompChampsUtils.h  defs.h  master.c  player.c  view.c
src/playersIA/: IA1_.c  IA2_.c  best .c
tests/: AllTest.c  CuTest.c  CuTest.h  testThatFails.c
